# m_str

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile_tests  Doxyfile  README.md
.github/workflows/: tests.yml
examples/usage_with_not_installed/: CMakeLists.txt  main.cxx
examples/usage_with_not_installed/modules/: CMakeLists.txt
m_str/: CMakeLists.txt  capacity.hh  constructors.hh  elm_access.hh  iterators.hh  lib.hh  m_str.hh  m_str_opt.hh  non_member_func.hh  operations.hh  private_func.hh  search.hh  strlen.hh
tests/: CMakeLists.txt  append_test.cxx  at_and_operator.cxx  begin_and_end_test.cxx  capacity_test.cxx  clear_test.cxx  compare_test.cxx  constructors_test.cxx  contains_test.cxx  copy_test.cxx  data_test.cxx  empty_test.cxx  erase_test.cxx  front_and_back_test.cxx  insert_test.cxx  length_test.cxx  main.cxx  operator_compare_test.cxx  operator_concatenates.cxx  push_back_test.cxx  replace_test.cxx  reserve_test.cxx  size_test.cxx  starts_and_ends_with_test.cxx  substr_test.cxx  to_m_str_test.cxx  write_test.cxx
